--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@angular/common": "~10.2.5",
     "@angular/core": "~10.2.5",
-    "@angular/fire": "^5.2.3",
+    "@angular/fire": "6.0",
     "@angular/forms": "~10.2.5",
     "@angular/platform-browser": "~10.2.5",
     "@angular/platform-browser-dynamic": "~10.2.5",
@@ -25,7 +25,7 @@
     "@ionic-native/google-plus": "^5.19.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.7.1",
+    "@ionic/angular": "^5.9.4",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.1.0",
     "cordova-plugin-googleplus": "^8.2.1",
@@ -39,19 +39,19 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.801.2",
+    "@angular-devkit/architect": "^0.1200.0",
     "@angular-devkit/build-angular": "~0.1002.4",
     "@angular-devkit/core": "~10.2.4",
-    "@angular-devkit/schematics": "~10.2.4",
+    "@angular-devkit/schematics": "^12.0.0",
     "@angular/cli": "~10.2.4",
     "@angular/compiler": "~10.2.5",
     "@angular/compiler-cli": "~10.2.5",
     "@angular/language-service": "~10.2.5",
-    "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "6",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
