--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1200.0",
-    "@angular-devkit/build-angular": "~0.1002.4",
+    "@angular-devkit/build-angular": "^0.1102.19",
     "@angular-devkit/core": "~11.2.19",
     "@angular-devkit/schematics": "^12.0.0",
-    "@angular/cli": "~11.2.19",
+    "@angular/cli": "^11.2.19",
     "@angular/compiler": "~11.2.14",
     "@angular/compiler-cli": "~11.2.14",
     "@angular/language-service": "~11.2.14",
