--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider; ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -15,7 +15,7 @@
   "dependencies": {
     "@angular/common": "~12.2.17",
     "@angular/core": "~12.2.17",
-    "@angular/fire": "7",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "~12.2.17",
     "@angular/platform-browser": "~12.2.17",
     "@angular/platform-browser-dynamic": "~12.2.17",
@@ -39,7 +39,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1202.18",
+    "@angular-devkit/architect": "^0.1200.0",
     "@angular-devkit/build-angular": "^12.2.18",
     "@angular-devkit/core": "~12.2.18",
     "@angular-devkit/schematics": "^12.0.0",
