--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^19.0.2",
+    "@angular-devkit/schematics": "^19.0.2",
     "@angular/animations": "^18.2.12",
+    "@angular/cdk": "^18.2.14",
     "@angular/common": "^18.2.12",
     "@angular/compiler": "^18.2.12",
     "@angular/core": "^18.2.12",
     "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.2.12",
+    "@angular/material": "^18.2.14",
     "@angular/platform-browser": "^18.2.12",
     "@angular/platform-browser-dynamic": "^18.2.12",
     "@angular/router": "^18.2.12",
-    "@schematics/angular": "^19.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.14.0"
@@ -31,6 +34,7 @@
     "@angular-devkit/build-angular": "^18.2.12",
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.12",
+    "@schematics/angular": "^18.2.12",
     "typescript": "^5.5.4"
   }
 }
