finish UserLevelAnswer function

--- a/functions/Makefile
+++ b/functions/Makefile
@@ -3,3 +3,6 @@ help:
 
 test: # Run Go tests
 	go test ./...
+
+build: # Build the local cmd to test everything compile
+	go build -o /dev/null cmd/main.go
