--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "start-fr": "ng serve --configuration production,fr",
+    "build": "ng build --localize",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -35,6 +36,7 @@
     "@angular-devkit/build-angular": "^18.2.12",
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.12",
+    "@angular/localize": "^18.2.12",
     "@schematics/angular": "^18.2.12",
     "typescript": "^5.5.4"
   }
